objects/SBQQ__Quote__c.object
<CustomObject>
    <fields>
        <fullName>PMC_CPQ_PriceBookType__c</fullName>
        <label>List Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PMC_CPQ_PriceBookValue</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_CPQ_PriceChangeFlag__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Price change Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_PriceCheckQuote__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is created as part of User Story to check whether this quote is a Price Check Quote</description>
        <label>Price Check Quote</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_PriceListDate__c</fullName>
        <description>This field will be used to store the date in which the price will be listed.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Price List Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_PriceValidityDiffrenceError__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Price Validity Diffrence Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_PriceValidityDiffrence__c</fullName>
        <label>Price Validity Diffrence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_PricingComments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Pricing Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_PrimaryBusinessType__c</fullName>
        <description>This field is to extract business type from Primary Business Type in Quote to use filter on Add product selection page</description>
        <formula>IF(TEXT(PMC_CPQ_QuoteRecordSubType__c)=&quot;International&quot;,&quot;&quot;, IF(
ISPICKVAL( PMC_CPQ_Region__c, &apos;North America&apos;) ,
IF( RecordType.DeveloperName =&apos;PMC_CPQ_International&apos;,&apos;&apos;,
IF(TEXT(PMC_CPQ_QuoteRecordSubType__c)=&quot;Industrial&quot;,&quot;&quot;,
IF( or(TEXT(PMC_CPQ_QuoteRecordSubType__c)=&apos;Co-Products&apos; ,TEXT(PMC_CPQ_QuoteRecordSubType__c)=&apos;Raw Material&apos;),&apos;Co-Product&apos;,
TEXT(PMC_CPQ_QuoteRecordSubType__c))
)
) ,
IF( OR(TRIM(RIGHT( TEXT( PMC_CPQ_QuoteRecordSubType__c ),LEN(TEXT( PMC_CPQ_QuoteRecordSubType__c ))-6) )=&quot;Potash&quot;,
TRIM(RIGHT( TEXT( PMC_CPQ_QuoteRecordSubType__c ),LEN(TEXT( PMC_CPQ_QuoteRecordSubType__c ))-6) )=&quot;Paraguay&quot;),&quot;&quot;,
if(TEXT(PMC_CPQ_QuoteRecordSubType__c)=&apos;B2B_Specialities&apos;,&apos;Co-Product&apos;,TRIM(RIGHT( TEXT( PMC_CPQ_QuoteRecordSubType__c ),LEN(TEXT( PMC_CPQ_QuoteRecordSubType__c ))-6) )))
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Business Type Extractor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_PrimaryContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is to capture the Primary Contact associated with the quote.</description>
        <label>Primary Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.SBQQ__Account__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>CPQ Quotes (Primary Contact1)</relationshipLabel>
        <relationshipName>CPQ_Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_PriorApprovedStatusDuration__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Prior Approved Status Duration</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_PriorDraftStatusDuration__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Prior Draft Status Duration</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_PriorPresentedStatusDuration__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Prior Presented Status Duration</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_PriorRequestStatusDuration__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Prior Request Status Duration</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ProductClassFilter__c</fullName>
        <description>Used in Search filter for international record type</description>
        <formula>IF(  RecordType.DeveloperName =&apos;PMC_CPQ_International&apos; &amp;&amp; ISPICKVAL( PMC_CPQ_Region__c ,&apos;North America&apos;) ,&apos;Commodity&apos; ,&apos;&apos;)</formula>
        <label>Product Class Filter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ProductComments__c</fullName>
        <description>This field is created as a part of story to handle/store value of Product Comments for any Quote.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Product Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ProductFamilyBlendFilter__c</fullName>
        <formula>IF(ISPICKVAL( PMC_CPQ_Region__c ,&apos;North America&apos;) &amp;&amp; TEXT(PMC_CPQ_QuoteRecordSubType__c )=&apos;Feed&apos; ||TEXT(PMC_CPQ_QuoteRecordSubType__c )=&apos;Fertilizer&apos; || TEXT(PMC_CPQ_QuoteRecordSubType__c )=&apos;Co-Products&apos; ,&apos;BLENDS&apos;,&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Family Blend Filter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ProductFamilyFilter__c</fullName>
        <description>used in search filter on product configuration page</description>
        <formula>IF(  RecordType.DeveloperName =&apos;PMC_CPQ_International&apos; &amp;&amp; ISPICKVAL( PMC_CPQ_Region__c, &apos;North America&apos;),&apos;DAP-MAP&apos;,&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Family Filter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ProductGroup__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Product Group</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ProductLocation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This Field captures the Location of the product.This is as per the  US GCPM 1064</description>
        <label>Product Location</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>PMC_CPQ_ProductLocation__c.PMC_CPQ_Location__r.RecordTypeId</field>
                <operation>equals</operation>
                <value>Origin Location</value>
            </filterItems>
            <infoMessage>Select Product Location Columns Link to add appropriate Locations</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>PMC_CPQ_ProductLocation__c</referenceTo>
        <relationshipLabel>CPQ Quotes</relationshipLabel>
        <relationshipName>CPQ_Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ProductOfCompetitor__c</fullName>
        <description>Field to store product information</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Product of Competitor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_QLEURL__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>QLE URL</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_QuantityChangedCount__c</fullName>
        <description>This field will track count of QLE&apos;s where quantity is changed.</description>
        <label>Quantity Changed Count</label>
        <summaryFilterItems>
            <field>SBQQ__QuoteLine__c.PMC_CPQ_IsQuantityUpdated__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_QuantityComments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Quantity Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_QuantityQualityTerms__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Quantity &amp; Quality Terms</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_QuantityQuality__c</fullName>
        <label>Quantity &amp; Quality</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No Draft survey / No Hold cleanliness</fullName>
                </value>
                <value>
                    <fullName>Draft survey / No Hold Cleanliness</fullName>
                </value>
                <value>
                    <fullName>Draft survey / Hold Cleanliness</fullName>
                </value>
                <value>
                    <fullName>Draft survey / Hold Cleanliness / No Release</fullName>
                </value>
                <value>
                    <fullName>Railcar</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Quantity__c</fullName>
        <label>Quantity</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_QuoteApproved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To identify already approved quote via approval process</description>
        <label>Quote Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_QuoteClassification__c</fullName>
        <label>Quote Classification</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Bid</fullName>
                </value>
                <value>
                    <fullName>Deal</fullName>
                </value>
                <value>
                    <fullName>List</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_CPQ_QuoteCreationTime__c</fullName>
        <description>This field captures the time Quote has been created</description>
        <formula>TIMEVALUE( CreatedDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicates the Time this quote has been created</inlineHelpText>
        <label>Quote Creation Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_QuoteInApprovedStatusTime__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Quote In Approved Status Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_QuoteInDraftStatusTime__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Quote In Draft Status Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_QuoteInPresentedStatusTime__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Quote In Presented Status time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_QuoteInRequestStatusTime__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Quote In Request Status Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_QuoteNumberIdentifier__c</fullName>
        <description>This field will store the quote number with prefix removed which will serve as an external id for integration.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Quote Number Identifier</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PMC_CPQ_QuoteOrigin__c</fullName>
        <description>If the Quote is inserted by DH User and the Stage is Request, then the value is &quot;DH Request&quot;, if not the value shall be blank.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Indicates if this originated from Mosaic Direct or not</inlineHelpText>
        <label>Quote Origin</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_QuoteOwnerRole__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Quote Owner Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_QuoteRecordSubType__c</fullName>
        <description>This field is used to capture the record type for the Quote</description>
        <inlineHelpText>Business area Segmentation.</inlineHelpText>
        <label>Business Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>PMC_CPQ_Region__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Feed</fullName>
                </value>
                <value>
                    <fullName>Fertilizer</fullName>
                </value>
                <value>
                    <fullName>Industrial</fullName>
                </value>
                <value>
                    <fullName>Raw Material</fullName>
                </value>
                <value>
                    <fullName>Co-Products</fullName>
                </value>
                <value>
                    <fullName>B2C - Fertilizer</fullName>
                </value>
                <value>
                    <fullName>B2B - Feed</fullName>
                </value>
                <value>
                    <fullName>B2B - Fertilizer</fullName>
                </value>
                <value>
                    <fullName>B2B - Specialties</fullName>
                </value>
                <value>
                    <fullName>B2C - Paraguay</fullName>
                </value>
                <value>
                    <fullName>B2B - Potash</fullName>
                </value>
                <value>
                    <fullName>International</fullName>
                </value>
                <value>
                    <fullName>Distribution</fullName>
                    <isActive>false</isActive>
                    <label>Distribution</label>
                </value>
                <value>
                    <fullName>Paraguay</fullName>
                    <isActive>false</isActive>
                    <label>Paraguay</label>
                </value>
                <value>
                    <fullName>Potash</fullName>
                    <isActive>false</isActive>
                    <label>Potash</label>
                </value>
                <value>
                    <fullName>Potassio</fullName>
                    <isActive>false</isActive>
                    <label>Potassio</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_CPQ_QuoteRecordType__c</fullName>
        <label>Quote Record Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Domestic NA</fullName>
                </value>
                <value>
                    <fullName>Domestic BR</fullName>
                </value>
                <value>
                    <fullName>International</fullName>
                </value>
                <value>
                    <fullName>International Distribution</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_CPQ_QuoteSavedFromQLE__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to find whether the Save happened from inside QLE or not. If checked, the Save was from QLE.</description>
        <inlineHelpText>Indicates Save happened from inside QLE or not. If checked, the Save was from QLE.</inlineHelpText>
        <label>Quote Saved From QLE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_QuoteShortNameDescription__c</fullName>
        <description>Based on the stanadardized Quote description across all quotes</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Quote Short Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_QuoteSource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This Field is created to store quote origin when cloning.</description>
        <label>Quote Source_Delete</label>
        <referenceTo>SBQQ__Quote__c</referenceTo>
        <relationshipLabel>CPQ Quotes (Quote Source)</relationshipLabel>
        <relationshipName>CPQ_Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_RailCarTermsConditions__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Rail Car Terms &amp; Conditions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_RailShipmentPeriodEnd__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Rail Shipment Period End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_RailShipmentPeriodStart__c</fullName>
        <description>Field to hold Rail Shipment Start date</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Rail Shipment Period Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_RawMaterial10ListCFR__c</fullName>
        <label>Raw Material 10 Average List CFR (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_RawMaterial10SoldCFR__c</fullName>
        <label>Raw Material 10 Average Sold CFR (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_RawMaterial1ListCFR__c</fullName>
        <description>This field is for Raw Material 1 List CFR</description>
        <label>Raw Material 1 Average List CFR (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_RawMaterial1SoldCFR__c</fullName>
        <label>Raw Material 1 Average Sold CFR (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_RawMaterial2ListCFR__c</fullName>
        <label>Raw Material 2 Average List CFR (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_RawMaterial2SoldCFR__c</fullName>
        <label>Raw Material 2 Average Sold CFR (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_RawMaterialName10__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Raw Material 10 Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_RawMaterialName1__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Raw Material 1 Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_RawMaterialName2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Raw Material 2 Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_RawMaterialQuantity10__c</fullName>
        <label>Raw Material 10 Quantity</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_RawMaterialQuantity1__c</fullName>
        <label>Raw Material 1 Quantity</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_RawMaterialQuantity2__c</fullName>
        <label>Raw Material 2 Quantity</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_RecordLocked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Record Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_RecordTypeName__c</fullName>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_RegionStructuralGroup__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Region Structural Group</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Region__c</fullName>
        <description>Set region based on Account Manager/SSR</description>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PMC_CPQ_Region</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_CPQ_RejectedReason__c</fullName>
        <label>Rejected Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>SBQQ__Status__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>PMC_CPQ_RejectedReasons</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_CPQ_RejectionReason__c</fullName>
        <description>This field is created as a part of story to handle/store value of Rejection Reason for any Quote.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Reason for which the Quote was rejected</inlineHelpText>
        <label>Rejection Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_RemittanceRegion__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Field to hold Remittance Region</inlineHelpText>
        <label>Remittance Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ReplacementMargin__c</fullName>
        <label>Replacement margin</label>
        <summarizedField>SBQQ__QuoteLine__c.PMC_CPQ_ReplacementCost__c</summarizedField>
        <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_RequestStatusDuration__c</fullName>
        <formula>IF( ISPICKVAL(SBQQ__Status__c , &quot;Request&quot;) &amp;&amp; NOT( ISBLANK( PMC_CPQ_QuoteInRequestStatusTime__c  ) ) , TEXT(ROUND(  PMC_CPQ_PriorRequestStatusDuration__c  +((NOW() - PMC_CPQ_QuoteInRequestStatusTime__c )*24),1))&amp;&apos; Hours&apos; , TEXT( PMC_CPQ_PriorRequestStatusDuration__c  ) &amp;&apos; Hours&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Request Status Duration</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_RequestedExpirationDateNumber__c</fullName>
        <formula>UNIXTIMESTAMP( PMC_CPQ_RequestedExpirationDateTime__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requested Expiration Date Number</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_RequestedExpirationDateTime__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Requested Expiration Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_RollupSeedzPoints__c</fullName>
        <description>This field populates the Rolled up seez points which is used Only for Brazil Account Managers</description>
        <label>Rolled-up Seedz Points</label>
        <summarizedField>SBQQ__QuoteLine__c.SBQQ__BatchQuantity__c</summarizedField>
        <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_SAPContractReference__c</fullName>
        <description>This field stores the Contract Number generated on SAP.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>SAP Contract Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_SalesAgreementEndDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Sales Agreement End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_SalesAgreementStartDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Sales Agreement Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_SalesAgreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If available in Opportunity the value will be present on related quote .</description>
        <label>Sales Agreement</label>
        <referenceTo>SalesAgreement</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_SalesAreaCombination__c</fullName>
        <label>Sales Area</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PMC_CPQ_SalesAreaUser</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_CPQ_SalesArea__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Area</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.SBQQ__Account__c</field>
                <operation>equals</operation>
                <valueField>PMC_SS_AccountSalesAreaRelationship__c.PMC_SS_Account__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>PMC_SS_AccountSalesAreaRelationship__c</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_SalesOffice__c</fullName>
        <label>Sales Office</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>PMC_CPQ_SalesAreaCombination__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>PMC_CPQ_SalesOfficeCodes</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_CPQ_SalesOrg__c</fullName>
        <description>Pull the Sales Org Value from Opportunity/Account/SalesOrg Object</description>
        <formula>LEFT( PMC_CPQ_SalesArea__r.PMC_SS_SalesArea__r.PMC_CPQ_SAPSalesOrganization__c ,4)</formula>
        <label>Sales Org</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_SecondaryBusinessType__c</fullName>
        <label>Secondary Business Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PMC_CPQ_QuoteBusinessType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_CPQ_SellingPriceCompetitor__c</fullName>
        <description>Field to hold the competitor selling price</description>
        <label>Selling Price (Competitor)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ServiceDirectorUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Director User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CPQ_Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ShipTo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ship To</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CPQ Quotes (Ship To)</relationshipLabel>
        <relationshipName>CPQ_Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_SignatureDateSent__c</fullName>
        <description>This field will be used to store the date at which the signature will be sent.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Signature Date Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_SignatureTimeSent__c</fullName>
        <description>This field will be used to store the time at which the signature will be sent.</description>
        <label>Signature Time Sent</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_SoldToShipToJunction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ship To</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>PMC_SS_AccountPartnerRelationships__c.PMC_SS_Account__c</field>
                <operation>equals</operation>
                <valueField>$Source.SBQQ__Account__c</valueField>
            </filterItems>
            <filterItems>
                <field>PMC_SS_AccountPartnerRelationships__c.PMC_SS_Type__c</field>
                <operation>equals</operation>
                <value>Ship-to</value>
            </filterItems>
            <filterItems>
                <field>PMC_SS_AccountPartnerRelationships__c.PMC_SS_RelatedAccountSalesArea__c</field>
                <operation>equals</operation>
                <valueField>$Source.PMC_CPQ_SalesArea__c</valueField>
            </filterItems>
            <filterItems>
                <field>PMC_SS_AccountPartnerRelationships__c.PMC_SS_RelatedAccountSalesArea__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>PMC_SS_AccountPartnerRelationships__c.PMC_SS_RelatedAccount__r.PMC_SS_SAPCustomerNumber__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>PMC_SS_AccountPartnerRelationships__c</referenceTo>
        <relationshipLabel>CPQ Quotes</relationshipLabel>
        <relationshipName>CPQ_Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_SubmissionDate__c</fullName>
        <description>This field is created as a part of story to handle/store value of Submission Date for any Quote.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Submission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_SumOfLineTotalPrice__c</fullName>
        <label>Sum of Line Total Price</label>
        <summarizedField>SBQQ__QuoteLine__c.PMC_CPQ_LineTotalPrice__c</summarizedField>
        <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_SystemUserBackend__c</fullName>
        <defaultValue>$Label.PMC_CPQ_SystemUserBackend</defaultValue>
        <description>This field is used to bypass Quote Expiration Validation rule for System User</description>
        <encryptionScheme>None</encryptionScheme>
        <label>System User Backend</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_TargetPriceMaximumDiffrence__c</fullName>
        <label>Target Price (Maximum Diffrence))</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_TimeCheck__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Time check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_TimeZoneOffset__c</fullName>
        <formula>IF( TEXT($User.TimeZoneSidKey) == &apos;America/Bahia&apos;, &apos;-3&apos; , IF(TEXT($User.TimeZoneSidKey) == &apos;America/Los_Angeles&apos;, &apos;-7&apos; , IF(TEXT($User.TimeZoneSidKey) == &apos;America/New_York&apos;, &apos;-4&apos; , IF(TEXT($User.TimeZoneSidKey) == &apos;Asia/Kolkata&apos;, &apos;5.3&apos; , &apos;0&apos;))))</formula>
        <label>Time Zone Offset</label>
        <type>Text</type>
    </fields>
</CustomObject>